--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "nofraud/checkout",
     "description": "NoFraud Checkout",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0"
+        "php": "~5.5.0|~5.6.0|~7.0.0|8.1"
     },
 	"type": "magento2-module",
     "license": [
         "Commercial"
     ],
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"autoload": {
 		"files": [
 		  "registration.php"
