--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,6 +10,8 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    # Skip running release workflow on forks
+    if: github.repository_owner == 'Nofraud'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -17,8 +19,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - run: npm install -g semantic-release @semantic-release/github @semantic-release/git @semantic-release/changelog 
+      - run: npm install -g semantic-release @semantic-release/github @semantic-release/git @semantic-release/changelog
       - run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE }}
