ci: add wip to pre-commit
This will allow to commit changes that are not being completed and labeled as `work in progress`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,5 +16,6 @@ repos:
             perf,
             refactor,
             revert,
+            wip,
             style,
           ] # optional: list of Conventional Commits types to allow
