chore: Update required php version
chore: Tweak PHP version

chore: Update php version

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "nofraud/checkout",
     "description": "NoFraud Checkout",
     "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0|8.1"
+        "php": ">=7.4.0 <=8.2.99"
     },
 	"type": "magento2-module",
     "license": [
