--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -12,5 +12,5 @@ plugins:
 branches:
   - "main"
   - "+([0-9])?(.{+([0-9]),x}).x"
-  - name: "alpha"
-    prerelease: "alpha"
+  - name: "release/*"
+    prerelease: "RC"
